# CloakedCanvas

./: .gitignore  .replit  .replit-run.sh  LICENSE  README.md  replit.nix  tsconfig.json
.github/workflows/: ci.yml
core/: Cargo.toml
core/src/: crypto.rs  file.rs  lib.rs  license.rs  main.rs  nightshade.rs  shamir.rs  store.rs
core/tests/: encryption.rs  key_management.rs
docs/: ADMIN_GUIDE.md  ARCHITECTURE.md  USER_GUIDE.md  WORKFLOWS.md
extension/: README.md  background.js  manifest.json
extension/content/: decryptOverlay.js  inject.js
extension/icons/: README.txt
extension/options/: options.html  options.js
extension/wasm/: cloakedcanvas_wasm.js
plugin/: index.html  main.js  manifest.json
web/: index.html  package.json
web/pkg/: cloakedcanvas_core.d.ts
web/ts/: main.ts  types.d.ts
