[package]
name = "cloakedcanvas-core"
version = "0.0.1"
edition = "2021"

[lib]
name = "cloakedcanvas_core"
path = "src/lib.rs"

[dependencies]
aes-gcm = "0.10"
rand = "0.8"
image = { version = "0.24", features = ["png", "jpeg"] }
resvg = "0.45.1"
usvg = "0.45.1"
tiny-skia = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
hyper = { version = "0.14", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tempfile = "3"
