[package]
name = "cloakedcanvas-core"
version = "0.0.1"
edition = "2021"

[lib]
name = "cloakedcanvas_core"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
aes-gcm = "0.10"
rand = "0.8"
image = { version = "0.24", features = ["png", "jpeg"] }
resvg = "0.45.1"
usvg = "0.45.1"
tiny-skia = "0.11"
clap = { version = "4", features = ["derive"] }
tempfile = "3"
base64 = "0.21"
sharks = "0.5"
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
hyper = { version = "0.14", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"] }
